[gd_scene load_steps=7 format=2]

[ext_resource path="res://Level.gd" type="Script" id=1]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cannon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Target.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/soundtrack.ogg" type="AudioStream" id=5]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 50, 720, 0, 0, 0, 0, 1230, 720 )
}

[node name="Level" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
Ball = ExtResource( 2 )
ball_count = 5

[node name="CannonPath" type="Path2D" parent="." index="0"]

editor/display_folded = true
self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 1 )

[node name="CannonSpawnLocation" type="PathFollow2D" parent="CannonPath" index="0"]

position = Vector2( 50, 720 )
rotation = -3.12944e-05
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Cannon" parent="." index="1" instance=ExtResource( 3 )]

_sections_unfolded = [ "Angular", "Collision", "Linear", "Pickable", "Transform" ]

[node name="Wall" type="Node2D" parent="." index="2"]

editor/display_folded = true
position = Vector2( 670, 360 )

[node name="StaticBody2D" type="StaticBody2D" parent="Wall" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="Collision" type="CollisionPolygon2D" parent="Wall/StaticBody2D" index="0"]

build_mode = 0
polygon = PoolVector2Array( -680, -370, 620, -370, 620, 370, -680, 370, -680, -360, -670, -360, -670, 360, 610, 360, 610, -360, -680, -360 )

[node name="Target" parent="." index="3" instance=ExtResource( 4 )]

[node name="Music" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="hit" from="Target" to="." method="_on_Target_hit"]


